--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,6 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <p>Hello world !</p>
+        <p>Hello world ?</p>
     </body>
 </html>
